--- a/package.json
+++ b/package.json
@@ -234,12 +234,15 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/json2csv": "^5.0.3",
     "axios": "^0.24.0",
     "cors": "^2.8.5",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.1",
     "electron-updater": "^4.3.9",
     "history": "4.x.x",
+    "json2csv": "^5.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
